--- a/test.html
+++ b/test.html
@@ -113,7 +113,8 @@
                         <li class="header__item"><a href="tours.html" class="heder__link">Этно-Тур</a></li>
                         <li class="header__item"><a href="active.html"
                                                     class="heder__link">Актив-Тур</a></li>
-                        <li class="header__item"><a href="test.html" class="heder__link heder__link-active">Тур номер 3</a></li>
+                        <li class="header__item"><a href="test.html" class="heder__link heder__link-active">Тур номер
+                            3</a></li>
                     </ul>
                 </nav>
             </div>
@@ -140,23 +141,22 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <picture class="1">
-                        <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
-                        <img src="img/rafting.jpeg" alt="MDN">
+                        <source srcset="img/slide/slide-start-1.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide_1_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="2">
-                        <source srcset="img/slide-start-2.webp" media="(min-width: 769px)">
-                        <img src="img/slide_2_mobile.webp" alt="MDN">
+                        <source srcset="img/slide/slide-start-2.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide-start-2.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="3">
-                        <source srcset="img/slide-start-3.webp" media="(min-width: 769px)">
-                        <img src="img/slide_3_mobile.webp" alt="MDN">
+                        <source srcset="img/slide/slide-start-3.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide_3_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
-
                 <!-- Buttons -->
                 <!--            <div class="swiper-button-prev"></div>-->
                 <!--            <div class="swiper-button-next"></div>-->
@@ -164,15 +164,13 @@
         </div>
         <div class="swiper-wrap">
             <div class="swiper-wrap__container">
-                <h1 class="swiper-container__title">Актив-тур</h1>
+                <h1 class="swiper-container__title">Тестовый-тур</h1>
                 <p class="swiper-container__text">Только с нами</p>
                 <a href="#tour__price" class="swuper__btn btn btn__orange">Забронировать</a>
             </div>
         </div>
-    </section>
-    <section class="tour" id="tour">
-        <div class="tour__container">
-            <div class="tour-lvl">
+        <div class="tour-lvl">
+            <div class="tour-lvl__container container">
                 <div class="tour-lvl__item">
                     <div class="tour-lvl__icon">
                         <svg class="tour-lvl__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" x="0px"
@@ -215,7 +213,7 @@
                             <g>
 </g>
 </svg>
-                        <p>2 дня</p>
+                        <p>3 дня</p>
                     </div>
                 </div>
                 <div class="tour-lvl__item">
@@ -356,7 +354,7 @@
                             <g>
 </g>
 </svg>
-                        <p>6 км</p>
+                        <p>18 км</p>
                     </div>
                 </div>
                 <div class="tour-lvl__item">
@@ -382,10 +380,14 @@
 	c-0.4,2.1-0.4,3.4-1.4,5.3c-0.2,0.7,1.5,4.1,2.1,4.6c1.7,1.4,3.4,2.8,5.2,4.1c2.8,2.1,0,5.1-1.1,8.3c-8.3-0.5-16.2-3.8-22.6-9.4
 	c-7.5-6.6-12-15.9-12.6-25.8C80.1,37,82.3,28.6,87.8,21.6z"/>
 </svg>
-                        <p>Легкая</p>
+                        <p>Cредняя</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="tour" id="tour">
+        <div class="container">
             <div class="tour-program">
                 <h2 class="tour__title title-vis">Топ локации тура</h2>
                 <div class="tour__content ">
@@ -620,37 +622,43 @@
                     <div class="accordion__item-body-content">
                         <ul class="tour__include__list">
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_4.jpg)"></div>
+                                <div class="tour__include-item__img"
+                                     style="background-image:url(img/price/service_4.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Трансфер и перемещение по всему маршруту
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_3.jpg)"></div>
+                                <div class="tour__include-item__img"
+                                     style="background-image:url(img/price/service_3.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Размещение в отеле
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_2.jpg)"></div>
+                                <div class="tour__include-item__img"
+                                     style="background-image:url(img/price/service_2.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Комплексное питание в туре
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_1.jpg)"></div>
+                                <div class="tour__include-item__img"
+                                     style="background-image:url(img/price/service_1.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Сопровождение гидом по всему маршруту
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_5.jpg)"></div>
+                                <div class="tour__include-item__img"
+                                     style="background-image:url(img/price/service_5.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Мастер класс по приготовлению осетинских пирогов
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_6.jpg)"></div>
+                                <div class="tour__include-item__img"
+                                     style="background-image:url(img/price/service_6.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Входы в музеи
                                 </div>
@@ -715,13 +723,16 @@
                     <input type="text" name="price" class="tour__price-value" value="2000" readonly>
                 </label>
                 <label>
-                    <input type="text" name="name" class="tour__price-input" placeholder="Ваше имя" maxlength="50" required>
+                    <input type="text" name="name" class="tour__price-input" placeholder="Ваше имя" maxlength="50"
+                           required>
                 </label>
                 <label>
-                    <input type="email" name="mail" class="tour__price-input" placeholder="Ваш e-mail" maxlength="50" required>
+                    <input type="email" name="mail" class="tour__price-input" placeholder="Ваш e-mail" maxlength="50"
+                           required>
                 </label>
                 <label>
-                    <input type="tel" name="tel" class="tour__price-input input__tel" placeholder="Ваш телефон" required>
+                    <input type="tel" name="tel" class="tour__price-input input__tel" placeholder="Ваш телефон"
+                           required>
                 </label>
                 <label>
                     <select name="date" class="input__date-illusion form__select" required>
@@ -816,7 +827,8 @@
                 </div>
             </div>
             <div class="contacts__right" id="location-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11698.801496681723!2d44.14092934200892!3d42.85805944590716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405aebdcbb65d2eb%3A0x51a809025e875106!2z0J3QuNC2LiDQo9C90LDQuywg0KDQtdGB0L8uINCh0LXQstC10YDQvdCw0Y8g0J7RgdC10YLQuNGPLdCQ0LvQsNC90LjRjywg0KDQvtGB0YHQuNGPLCAzNjMyMTQ!5e0!3m2!1sru!2str!4v1618099544535!5m2!1sru!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11698.801496681723!2d44.14092934200892!3d42.85805944590716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405aebdcbb65d2eb%3A0x51a809025e875106!2z0J3QuNC2LiDQo9C90LDQuywg0KDQtdGB0L8uINCh0LXQstC10YDQvdCw0Y8g0J7RgdC10YLQuNGPLdCQ0LvQsNC90LjRjywg0KDQvtGB0YHQuNGPLCAzNjMyMTQ!5e0!3m2!1sru!2str!4v1618099544535!5m2!1sru!2str"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </section>
