--- a/tours.html
+++ b/tours.html
@@ -141,23 +141,22 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <picture class="1">
-                        <source srcset="img/slide_3_mobile.jpg" media="(min-width: 769px)">
-                        <img src="img/slide_3_mobile.jpg" alt="MDN">
+                        <source srcset="img/slide/slide-start-1.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide_1_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="2">
-                        <source srcset="img/slide_3_mobile.jpg" media="(min-width: 769px)">
-                        <img src="img/slide_3_mobile.jpg" alt="MDN">
+                        <source srcset="img/slide/slide-start-2.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide-start-2.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="3">
-                        <source srcset="img/slide_3_mobile.jpg" media="(min-width: 769px)">
-                        <img src="img/slide_3_mobile.jpg" alt="MDN">
+                        <source srcset="img/slide/slide-start-3.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide_3_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
-
                 <!-- Buttons -->
                 <!--            <div class="swiper-button-prev"></div>-->
                 <!--            <div class="swiper-button-next"></div>-->
@@ -165,15 +164,13 @@
         </div>
         <div class="swiper-wrap">
             <div class="swiper-wrap__container">
-                <h1 class="swiper-container__title">Актив-тур</h1>
+                <h1 class="swiper-container__title">Этно - Тур</h1>
                 <p class="swiper-container__text">Только с нами</p>
                 <a href="#tour__price" class="swuper__btn btn btn__orange">Забронировать</a>
             </div>
         </div>
-    </section>
-    <section class="tour" id="tour">
-        <div class="tour__container">
-            <div class="tour-lvl">
+        <div class="tour-lvl">
+            <div class="tour-lvl__container container">
                 <div class="tour-lvl__item">
                     <div class="tour-lvl__icon">
                         <svg class="tour-lvl__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" x="0px"
@@ -357,7 +354,7 @@
                             <g>
 </g>
 </svg>
-                        <p>6 км</p>
+                        <p>18 км</p>
                     </div>
                 </div>
                 <div class="tour-lvl__item">
@@ -383,10 +380,14 @@
 	c-0.4,2.1-0.4,3.4-1.4,5.3c-0.2,0.7,1.5,4.1,2.1,4.6c1.7,1.4,3.4,2.8,5.2,4.1c2.8,2.1,0,5.1-1.1,8.3c-8.3-0.5-16.2-3.8-22.6-9.4
 	c-7.5-6.6-12-15.9-12.6-25.8C80.1,37,82.3,28.6,87.8,21.6z"/>
 </svg>
-                        <p>Легкая</p>
+                        <p>Cредняя</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="tour" id="tour">
+        <div class="container">
             <div class="tour-program">
                 <h2 class="tour__title title-vis">Топ локации тура</h2>
                 <div class="tour__content ">
