--- a/index.html
+++ b/index.html
@@ -140,23 +140,22 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <picture class="1">
-                        <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
-                        <img src="img/slide_1_mobile.webp" alt="MDN">
+                        <source srcset="img/slide/slide-start-1.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide_1_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="2">
-                        <source srcset="img/slide-start-2.webp" media="(min-width: 769px)">
-                        <img src="img/slide_2_mobile.webp" alt="MDN">
+                        <source srcset="img/slide/slide-start-2.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide-start-2.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="3">
-                        <source srcset="img/slide-start-3.webp" media="(min-width: 769px)">
-                        <img src="img/slide_3_mobile.webp" alt="MDN">
+                        <source srcset="img/slide/slide-start-3.jpg" media="(min-width: 769px)">
+                        <img src="img/slide/slide_3_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
-
                 <!-- Buttons -->
                 <!--            <div class="swiper-button-prev"></div>-->
                 <!--            <div class="swiper-button-next"></div>-->
@@ -164,7 +163,7 @@
         </div>
         <div class="swiper-wrap">
             <div class="swiper-wrap__container">
-                <h1 class="swiper-container__title">Актив-тур</h1>
+                <h1 class="swiper-container__title">Лучшие туры</h1>
                 <p class="swiper-container__text">Только с нами</p>
                 <a href="#tour__price" class="swuper__btn btn btn__orange">Забронировать</a>
             </div>
