--- a/active.html
+++ b/active.html
@@ -167,7 +167,7 @@
             </div>
         </div>
         <div class="tour-lvl">
-            <div class="tour-lvl__container container">
+            <div class="tour-lvl__container">
                 <div class="tour-lvl__item">
                     <div class="tour-lvl__icon">
                         <svg class="tour-lvl__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" x="0px"
