--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="swiper-slide">
                     <picture class="2">
                         <source srcset="img/slide/slide-start-2.jpg" media="(min-width: 769px)">
-                        <img src="img/slide/slide-start-2.jpg" alt="MDN" class="swiper-slide__img">
+                        <img src="img/slide/slide_2_mobile-min.jpg" alt="MDN" class="swiper-slide__img">
                     </picture>
                 </div>
                 <div class="swiper-slide">
