--- a/tours.html
+++ b/tours.html
@@ -403,13 +403,13 @@
                             <div class="swiper-cube">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/karmadon/karmadon1.webp)"></div>
+                                         style="background-image:url(img/karmadon/karmadon1-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/karmadon/karmadon2.webp)"></div>
+                                         style="background-image:url(img/karmadon/karmadon2-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/karmadon/karmadon3.webp)"></div>
+                                         style="background-image:url(img/karmadon/karmadon3-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/karmadon/karmadon4.webp)"></div>
+                                         style="background-image:url(img/karmadon/karmadon4-min.jpg)"></div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
@@ -431,13 +431,13 @@
                             <div class="swiper-cube">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dargavs/dargavs1.webp)"></div>
+                                         style="background-image:url(img/dargavs/dargavs1-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dargavs/dargavs2.webp)"></div>
+                                         style="background-image:url(img/dargavs/dargavs2-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dargavs/dargavs3.webp)"></div>
+                                         style="background-image:url(img/dargavs/dargavs3-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dargavs/dargavs4.webp)"></div>
+                                         style="background-image:url(img/dargavs/dargavs4-min.jpg)"></div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
@@ -456,13 +456,13 @@
                             <div class="swiper-cube">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dzivgis/dzivgis1.webp)"></div>
+                                         style="background-image:url(img/dzivgis/dzivgis1-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dzivgis/dzivgis2.webp)"></div>
+                                         style="background-image:url(img/dzivgis/dzivgis2-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dzivgis/dzivgis3.webp)"></div>
+                                         style="background-image:url(img/dzivgis/dzivgis3-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/dzivgis/dzivgis4.webp)"></div>
+                                         style="background-image:url(img/dzivgis/dzivgis4-min.jpg)"></div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
@@ -483,13 +483,13 @@
                             <div class="swiper-cube">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/biragzang/biragzang1.webp)"></div>
+                                         style="background-image:url(img/biragzang/biragzang1-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/biragzang/biragzang2.webp)"></div>
+                                         style="background-image:url(img/biragzang/biragzang2-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/biragzang/biragzang3.webp)"></div>
+                                         style="background-image:url(img/biragzang/biragzang3-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/biragzang/biragzang4.webp)"></div>
+                                         style="background-image:url(img/biragzang/biragzang4-min.jpg)"></div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
@@ -509,13 +509,13 @@
                             <div class="swiper-cube">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/towers/rod1.webp)"></div>
+                                         style="background-image:url(img/towers/tower1-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/towers/rod2.webp)"></div>
+                                         style="background-image:url(img/towers/tower2-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/towers/rod3.webp)"></div>
+                                         style="background-image:url(img/towers/tower3-min.jpg)"></div>
                                     <div class="swiper-slide"
-                                         style="background-image:url(img/towers/rod4.webp)"></div>
+                                         style="background-image:url(img/towers/tower4-min.jpg)"></div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
